加入动画样式删除无用文件及组件

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
     <title>reader</title>
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../public/css/animate.css" rel="stylesheet">
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top fadeOutUp">
+      <div class="container">
+        <button type="button" class="btn btn-default navbar-btn" aria-label="Left Align">
+          <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+        </button>
+      </div>
+    </nav>
     <div class="container">
       <h2>“公车标识化”需从江苏推及全国</h2>
       <hr>
@@ -18,7 +26,33 @@
         </ul>
       </nav>
     </div>
-    <script src="../bower_components/zepto/zepto.min.js"></script>
+    <div class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <button class="btn btn-default" type="submit">列表</button>
+        <button type="button" class="btn btn-default">夜间</button>
+        <div class="btn-group dropup navbar-btn">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            字号 <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">小</a></li>
+            <li><a href="#">中</a></li>
+            <li><a href="#">大</a></li>
+          </ul>
+        </div>
+        <div class="btn-group dropup navbar-btn">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            背景 <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">红</a></li>
+            <li><a href="#">黄</a></li>
+            <li><a href="#">蓝</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>  
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
     <script src="../bower_components/base64/base64.min.js"></script>
     <script src="../bower_components/jsonp/jsonp.js"></script>
